--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-    "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
+    "devCommand": "uvicorn try_api:app --host 0.0.0.0 --port 3000",
     "builds": [
       {
-        "src": "main.py",
+        "src": "try_api.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "main.py"
+        "dest": "try_api.py"
       }
     ]
   }
